# ska-sdp-data-product-api

./: .coverage  .env  .gitignore  .gitlab-ci.yml  .release  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
docs/: make.bat
docs/src/: Changelog.rst  Development.rst  conf.py  index.rst  overview.rst
docs/src/developerguide/: Deployment.rst  Development.rst
docs/src/releases/: Changelog.rst
docs/src/userguide/: api.rst  client.rst  http.rst  overview.rst
images/ska_sdp_dataproduct_api/: Dockerfile
images/ska_sdp_dataproduct_postgresql/: Dockerfile
src/ska_dataproduct_api/api/: __init__.py  main.py
src/ska_dataproduct_api/components/annotations/: annotation.py
src/ska_dataproduct_api/components/metadata/: metadata.py
src/ska_dataproduct_api/configuration/: settings.py
src/ska_dataproduct_api/sql/: dpd_metadata_table.sql
src/ska_dataproduct_api/utilities/: helperfunctions.py
src/ska_sdp_data_product_api/: main.py
src/ska_sdp_data_product_api/api/: insert_metadata.py
src/ska_sdp_data_product_api/core/: settings.py
src/ska_sdp_data_product_api/elasticsearch/: elasticsearch_api.py  insert_metadata.py
src/ska_sdp_dataproduct_api/: __init__.py  data_product_metadata_json_schema.json  main.py
src/ska_sdp_dataproduct_api/api/: __init__.py  main.py
src/ska_sdp_dataproduct_api/configuration/: mui_datagrid.py  settings.py
src/ska_sdp_dataproduct_api/core/: data_product_metadata_json_schema.json  helperfunctions.py  settings.py
src/ska_sdp_dataproduct_api/elasticsearch/: elasticsearch_api.py
src/ska_sdp_dataproduct_api/inmemorystore/: inmemorystore.py
src/ska_sdp_dataproduct_api/metadatastore/: datastore.py  store_factory.py
src/ska_sdp_dataproduct_api/utilities/: exceptions.py  helperfunctions.py
tests/: conftest.py  expectedresuls.py  mock_elasticsearch_api.py  mock_postgressql.py  test_annotations.py  test_authorisation.py  test_datastore.py  test_elasticsearch_api.py  test_example.py  test_exceptions.py  test_helperfunctions.py  test_in_memory_search.py  test_insert_metadata.py  test_main.py  test_metadata.py  test_mui_datagrid.py  test_postgresql.py
tests/test_files/example_files/: example_metadata.json  example_schema.json  expected_appended_metadata.json  expected_metadata.py  extended_metadata.json  extended_schema.json
tests/test_files/sql/: create_test_dlm_data.sql  create_test_dlm_tables.sql
(+113 files in other folders)
