[tool.poetry]
name = "ska-sdp-dataproduct-api"
version = "0.3.0"
description = "This repository contain the API that exposes SDP Data Products to the SDP Data Product Dashboard"
authors = ["Andre Odendaal <andre@vivosa.co.za>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_sdp_dataproduct_api", from = "src" },
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
pyyaml = "^6.0"
elasticsearch = "^8.6.0"
elasticsearch-async = "^6.2.0"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "7.1.2"
pytest-cov = "^3.0.0"
build = "^0.8.0"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
