[tool.poetry]
name = "ska-dataproduct-api"
version = "0.11.0"
description = "This repository contain the API that exposes SKA Data Products to the SKA Data Product Dashboard"
authors = ["Andre Odendaal <andre@vivosa.co.za>"]
license = "BSD-3-Clause"
packages = [
    { include = "ska_dataproduct_api", from = "src" },
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.18.2"
pyyaml = "^6.0"
elasticsearch = "^8.6.0"
elasticsearch-async = "^6.2.0"
aiohttp = "^3.8.3"
ska-ser-logging = "^0.4.1"
ska-sdp-dataproduct-metadata = "^0.5.1"
httpx = "^0.25.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pylint-junit = "^0.3.2"
pytest = "7.1.2"
pytest-cov = "^3.0.0"
build = "^0.8.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
ska-ser-sphinx-theme = "^0.1.2"
sphinx-copybutton = "^0.5.2"
sphinx-new-tab-link = "^0.4.0"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
